<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.SearchFragment"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        >

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/explore"
                android:textSize="@dimen/text_regular_3x"
                android:textStyle="bold"
                android:textColor="@color/title_color"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFilter"
                android:layout_width="wrap_content"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_height="wrap_content"
                android:text="@string/filters"
                android:layout_gravity ="end"
                android:backgroundTint="@color/color_white"
                android:textColor="@color/title_color"
                android:textAllCaps="false"
                app:elevation="@dimen/margin_medium"
                app:iconTint="@color/icon_color"
                app:icon="@drawable/ic_filter"
                app:cornerRadius="@dimen/margin_medium_2"
                android:layout_marginEnd="@dimen/margin_medium_2"/>

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/location"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium_2"
            android:hint="@string/location"
            app:endIconDrawable="@drawable/ic_pointer"
            app:endIconTintMode="screen"
            app:endIconTint="@color/background"
            app:endIconMode="custom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dhaka">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutTwo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/location"
            android:layout_margin="@dimen/margin_medium_2"
            android:hint="@string/check_in"
            app:layout_constraintEnd_toStartOf="@+id/textInputLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCheckIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/check_out"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutTwo"
            app:layout_constraintEnd_toEndOf="@+id/location"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textInputLayoutTwo"
            app:layout_constraintTop_toTopOf="@+id/textInputLayoutTwo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCheckOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:hint="@string/counts"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayoutTwo"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/textInputLayoutTwo"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutTwo">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/rooms"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout3">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:text="@string/search_now"
            app:backgroundTint="@color/icon_color"
            app:layout_constraintEnd_toStartOf="@+id/appCompatImageButton2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/appCompatImageButton2"
            android:layout_width="64dp"
            android:layout_height="0dp"
            android:backgroundTint="@color/icon_color"
            android:src="@drawable/ic_map_black_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/materialButton2"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/materialButton2"
            app:layout_constraintTop_toTopOf="@+id/materialButton2" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:text="@string/top_searches"
            android:textColor="@color/title_color"
            android:textSize="@dimen/text_regular_3x"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/materialButton2"
            app:layout_constraintTop_toBottomOf="@+id/materialButton2" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="0dp"
            android:layout_height="230dp"
            app:layout_constraintEnd_toEndOf="@+id/appCompatImageButton2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:text="@string/recent_searches"
            android:textColor="@color/title_color"
            android:textSize="@dimen/text_regular_3x"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/viewPager" />
    </androidx.constraintlayout.widget.ConstraintLayout>

       <!-- <include layout="@layout/bottom_sheet_item_view"/>-->
    </androidx.core.widget.NestedScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>
